<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">个人财务管理</string>
    <string name="wel_title">\t\t\t欢迎登录\n个人财务管理系统</string>
    <string name="userName">用户名：</string>
    <string name="password">密码：\t\t</string>
    <string name="userNameHint">用户名</string>
    <string name="passwordHint">密码</string>
    <string name="login">登录</string>
    <string name="quit">退出</string>
    <string name="registerLink">还没有账户？点击注册</string>
    <string name="historybills">历史账单</string>
    <string name="nowtotal">当前收支</string>
    <string name="addrecord">添加纪录</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
