<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@drawable/background_login"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >
    <TextView
            android:layout_gravity="center_horizontal"
            android:text="@string/wel_title"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal">
        <TextView
                android:text="@string/userName"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/txt_main_userName"
                android:textColor="#000000"
                android:hint="@string/userNameHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
        <TextView
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/txt_main_password"
                android:textColor="#000000"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btn_main_login"
                android:layout_weight="1"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="#000000"
                android:background="#cccccc"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btn_main_quit"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#000000"
                android:background="#cccccc"
                android:layout_marginLeft="15dp"
                android:text="@string/quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
            android:id="@+id/txt_main_register"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/registerLink"
            android:textColor="#0000ff"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>

